--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
       <div class="flex flex-row md:flex-row mt-2">
         <a href="https://discordapp.com/users/763907719307722762" target="_blank" class="mr-2 text-3xl hvr-grow border-sweetBlack p-2 md:px-3 mx-2 my-2 text-bromush font-bold rounded-lg bg-bromush border-2"><svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" fill="currentColor" viewBox="0 0 16 16"><path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"></path></svg></a>
         
-        <a href="https://twitter.com/@bromush_"
+        <a href="https://x.com/@bromush_"
  target="_blank" class="mr-2 text-3xl hvr-grow bg-bromush p-2 md:px-3 mx-2 my-2 font-bold rounded-lg text-bromush border-sweetBlack border-2"><?xml version="1.0" encoding="UTF-8"?>
-<svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" viewBox="0 0 248 204">
-  <path fill="currentColor" d="M221.95 51.29c.15 2.17.15 4.34.15 6.53 0 66.73-50.8 143.69-143.69 143.69v-.04c-27.44.04-54.31-7.82-77.41-22.64 3.99.48 8 .72 12.02.73 22.74.02 44.83-7.61 62.72-21.66-21.61-.41-40.56-14.5-47.18-35.07 7.57 1.46 15.37 1.16 22.8-.87-23.56-4.76-40.51-25.46-40.51-49.5v-.64c7.02 3.91 14.88 6.08 22.92 6.32C11.58 63.31 4.74 33.79 18.14 10.71c25.64 31.55 63.47 50.73 104.08 52.76-4.07-17.54 1.49-35.92 14.61-48.25 20.34-19.12 52.33-18.14 71.45 2.19 11.31-2.23 22.15-6.38 32.07-12.26-3.77 11.69-11.66 21.62-22.2 27.93 10.01-1.18 19.79-3.86 29-7.95-6.78 10.16-15.32 19.01-25.2 26.16z"/>
-</svg></a>
+<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+ height="40px" width="40px" version="1.1" viewBox="0 0 461.001 461.001" xml:space="preserve"> 
+<path fill="currentColor" d="M33 2953 c19 -27 274 -390 567 -808 293 -418 541 -772 552 -787 l19
+-28 -573 -652 c-316 -359 -577 -659 -582 -665 -6 -10 21 -13 122 -13 l129 0
+509 579 c279 319 511 578 515 575 4 -2 188 -263 410 -579 l404 -575 442 0
+c244 0 443 3 443 6 0 3 -268 388 -596 856 -328 467 -597 856 -598 863 0 7 233
+280 520 607 286 326 535 610 553 631 l33 37 -133 -1 -134 0 -480 -549 c-264
+-302 -482 -549 -485 -549 -3 -1 -178 246 -390 549 l-385 549 -448 1 -449 0 35
+-47z m1663 -1450 c509 -713 928 -1303 931 -1310 4 -10 -34 -13 -194 -13 l-200
+0 -929 1302 c-511 716 -930 1305 -932 1310 -2 4 87 8 197 8 l200 0 927 -1297z"/>
+</svg>
         
       <a href="https://tiktok.com/@bromush_"
  target="_blank" class="mr-2 text-3xl hvr-grow bg-bromush p-2 md:px-3 mx-2 my-2 font-bold rounded-lg text-bromush border-sweetBlack border-2"><?xml version="1.0" encoding="utf-8"?>
