--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <a href="https://x.com/@bromush_"
  target="_blank" class="mr-2 text-3xl hvr-grow bg-bromush p-2 md:px-3 mx-2 my-2 font-bold rounded-lg text-bromush border-sweetBlack border-2"><?xml version="1.0" encoding="UTF-8"?>
 <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
- height="40px" width="40px" version="1.1" viewBox="0 0 461.001 461.001" xml:space="preserve"> 
+ height="40px" width="40px" version="1.1" viewBox="0 0 461.001 461.001" xml:space="preserve"> <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)"
+>
 <path fill="currentColor" d="M33 2953 c19 -27 274 -390 567 -808 293 -418 541 -772 552 -787 l19
 -28 -573 -652 c-316 -359 -577 -659 -582 -665 -6 -10 21 -13 122 -13 l129 0
 509 579 c279 319 511 578 515 575 4 -2 188 -263 410 -579 l404 -575 442 0
@@ -42,6 +43,7 @@ c244 0 443 3 443 6 0 3 -268 388 -596 856 -328 467 -597 856 -598 863 0 7 233
 -302 -482 -549 -485 -549 -3 -1 -178 246 -390 549 l-385 549 -448 1 -449 0 35
 -47z m1663 -1450 c509 -713 928 -1303 931 -1310 4 -10 -34 -13 -194 -13 l-200
 0 -929 1302 c-511 716 -930 1305 -932 1310 -2 4 87 8 197 8 l200 0 927 -1297z"/>
+ </g>
 </svg>
         
       <a href="https://tiktok.com/@bromush_"
