--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <meta property="og:type" content="website">
       <meta property="og:description" content="Jesus 1st">
       <meta property="og:image" content="/images/pfpf.png">
-      <meta property="og:url" content="https://bromush.repl.co">
+      <meta property="og:url" content="https://bromush.github.io">
       <meta content="#324C59" data-react-helmet="true" name="theme-color" />
     </head>
     <link rel="stylesheet" href="styles/theTrendingStyle.css">
