--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       background-image: url("images/nightland.gif");
       background-repeat: no-repeat;
       background-attachment: scroll;
-      background-size: cover;
+      background-size: 100%;
     }
   </style>
 </html>
