--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   <style>
     body {
       height: 100vh;
-      background-image: url("images/nightland.gif");
+      background-image: url("images/tumblertickler.gif");
       background-repeat: no-repeat;
       background-attachment: scroll;
-      background-size: 100%;
+      background-size: 100% 100%;
     }
   </style>
 </html>
