--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <style>
     body {
       height: 100vh;
-      background-image: url("images/tumblertickler.gif");
+      background-image: url("images/nightland.gif");
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-size: 100% 100%;
