--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <meta content="#324C59" data-react-helmet="true" name="theme-color" />
     </head>
     <link rel="stylesheet" href="styles/theTrendingStyle.css">
-    <link rel="shortcut icon" type="image/x-icon" href="images/invisble.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/invisible.png" />
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/css/all.css" />
   </head>
