--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <meta property="og:description" content="Catholic">
       <meta property="og:image" content="/images/newpfp.png">
       <meta property="og:url" content="https://xalie10.github.io">
-      <meta content="#324C59" data-react-helmet="true" name="theme-color" />
+      <meta content="#553c9a" data-react-helmet="true" name="theme-color" />
     </head>
     <link rel="stylesheet" href="styles/theTrendingStyle.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/newpfp.png" />
