--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/css/all.css" />
   </head>
-  <body class="overflow-x-hidden">
+  <body class="overflow-x-hidden overflow-y-hidden">
     <nav id="navigationBar" class="flex flex-row items-center justify-center p-8"><a target="_blank" href="https://dailyverses.net/1-john/4/16" class=" mr-2 text-4xl bg-purple-900 p-2 md:px-4 mx-2 hvr-grow font-bold border-black text-xal my-2 rounded-lg"> Catholic</a></nav>
     <div id="container" class="flex flex-col pt-16 items-center justify-center"><img src="images/newpfp.png" alt="pfp" width="125px" height="125px" class="max-w-xs md:max-w-1xl noselect text-xal pointer-events-none rounded-lg" />
       <div class="flex flex-row md:flex-row mt-2"><a href="https://discordid.netlify.app/?id=763907719307722762" target="_blank" class="mr-2 text-3xl bg-purple-800 hvr-grow p-2 md:px-3 mx-2 my-2 text-xal font-bold rounded-lg"><svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" fill="currentColor" viewBox="0 0 16 16">
