--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Catholic">
+    <meta name="theme-color" content="#553c9a" data-react-helmet="true">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <head>
       <title>xalie</title>
@@ -12,7 +13,6 @@
       <meta property="og:description" content="Catholic">
       <meta property="og:image" content="/images/newpfp.png">
       <meta property="og:url" content="https://xalie10.github.io">
-      <meta content="#553c9a" data-react-helmet="true" name="theme-color" />
     </head>
     <link rel="stylesheet" href="styles/theTrendingStyle.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/newpfp.png" />
